performance data committed